# SolAgg

./: Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: bench_fetch_txs.rs  bench_query_txs.rs
src/: api.rs  datetime.rs  fetch.rs  lib.rs  main.rs  parse.rs  store.rs  stream.rs  types.rs
